Fixed issues with overflowing content on small screens in landingPageHolidays. Removed continuous animation and ability to toggle animation on small screens, and added overflow-y auto.

--- a/styles/LandingPages/LandingPageHolidays.module.scss
+++ b/styles/LandingPages/LandingPageHolidays.module.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap");
+
 .landingPageHolidays {
   --content-height: 25rem;
   --bottom-height: 7.5rem;
@@ -8,6 +9,7 @@
   --clr-primary-hover: rgb(52, 167, 238);
 
   height: calc(100vh - 7.75rem);
+  height: 100vh;
   width: 100vw;
   overflow: hidden;
   position: relative;
@@ -58,6 +60,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
+    height: 100%;
     min-height: 100%;
     min-width: 100%;
     background-size: cover;
@@ -82,7 +85,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0.5rem 2rem;
-    animation: fadeDownNav 2s ease, visibleNav 8s 2s, fadeUpNav 2s ease 10s;
+    animation: fadeDownNav 2s ease, visibleNav 8s 2s;
 
     &__logo {
       background: white;
@@ -142,15 +145,18 @@
   }
 
   &__header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
     flex: 1;
     &__title {
       width: 100%;
       color: white;
-      margin-top: 15rem;
       text-align: center;
+      margin-top: 5rem;
       font-size: clamp(1.3rem, calc(2rem + 1vw), 5rem);
-      animation: fadeInTitle 2s ease, visibleTitle 8s 2s,
-        fadeOutTitle 2s ease 10s;
+      animation: fadeInTitle 2s ease, visibleTitle 8s 2s;
       opacity: 0;
       text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     }
@@ -193,6 +199,7 @@
     border-radius: 4rem 4rem 0 0;
     animation: fadeUpContent 2s ease, visibleContent 8s 2s,
       fadeDownContent 2s 10s;
+    animation: fadeUpContent 2s ease, visibleContent 8s 2s;
     position: relative;
     height: 0;
     box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
@@ -238,6 +245,7 @@
       border-radius: 4rem 4rem 0 0;
       animation: invisibleBottom 1s, fadeUpBottom 1s ease 1s,
         visibleBottom 8s 2s, fadeDownBottom 2s ease 10s;
+      animation: invisibleBottom 1s, fadeUpBottom 1s ease 1s;
       opacity: 0.5;
     }
   }
@@ -407,6 +415,7 @@
     min-width: 280px;
     --bottom-height: 6rem;
     height: calc(100vh - 7.6rem);
+    overflow: hidden;
   }
 
   .landingPageHolidays__disableBtn {
@@ -430,5 +439,14 @@
   .landingPageHolidays__content__bottom {
     position: absolute;
     bottom: 0;
+  }
+}
+
+@media (max-width: 40rem) and (max-aspect-ratio: 1/1), (max-height: 35rem) {
+  .landingPageHolidays {
+    overflow: hidden auto;
+    &__disableBtn {
+      display: none;
+    }
   }
 }
